--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@ layout: layout.njk
         <p>Here are some of my projects that I have worked on or are in develompent.</p>
         <div class="container-cards">
 
-            <a class="card-link" href="{{ '/bookish/' | url }}">
+            <a class="card-link" href="/bookish/">
                 <div class="card">
                     <div class="card-image-bookish card-image-settings"></div>
                     <div class="card-description">
