--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@ layout: layout.njk
 ---
 
 <main class="main-container">
+    <h1>Welcome to my page</h1>
     <div class="section about-me">
         <h2 class="section-subtitle">Experience</h2>
         <p>
