added media queries for mobile resposiveness

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@ layout: layout.njk
 ---
 
 <main class="main-container">
-    <h1>Welcome to my page</h1>
+    <div id="welcome-message">
+        <h1>Hi, I'm Leo Alferez.</h1>
+        <p>Thank you for visiting my website</p>
+    </div>
     <div class="section about-me">
         <h2 class="section-subtitle">Experience</h2>
         <p>
