--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@ layout: layout.njk
         <h1>Hi, I'm Leo Alferez.</h1>
         <p>Thank you for visiting my website</p>
     </div>
+
     <div class="section about-me">
         <h2 class="section-subtitle">Experience</h2>
         <p>
@@ -49,13 +50,19 @@ layout: layout.njk
 
 
     
+    
+    <div class="section">
         <h2 class="section-subtitle">Projects</h2>
         <p>Here are some of my projects that I have worked on or are in develompent.</p>
         <div class="container-cards">
 
             <a class="card-link" href="/bookish/">
                 <div class="card">
-                    <div class="card-image-bookish card-image-settings"></div>
+                    <!-- <div class="card-image-bookish card-image-settings"></div> -->
+
+                    <div class="image-container">
+                        <img class="card-image-settings" src="assets/bookish/bookishh_screenshot1.png" alt="">
+                    </div>
                     <div class="card-description">
                         <div>
                             <h2 class="card-title">Bookish!</h2>
